--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,11 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
 }
-
+@media (max-width: 980px) {
+    .col-xs-12.col-sm-6:nth-child(2) {
+      width: 100%;
+    }
+  }
 /* Navbar Styles */
 .navbar {
     position: fixed;
