--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,9 @@
                       </div>
                       <div id="controls" style="flex: 40%;">
                           <div class="box">
-                              <h3>Shatranj Tutor says:</h3>
-                              <p><strong>{{advantage}}</strong></p>
+                            <h3 style="color: blue; text-underline-position: below;">Shatranj Tutor says:</h3>
+                            <p id="advantage"><strong>No Advantage</strong></p>
+                           
                               <form class="form-inline">
                                   <button type="button" class="btn btn-default" id="backBtn" onclick="takeBack()">Take Back</button>
                                   <button type="button" class="btn btn-default" id="reset" onclick="newGame()">New Game</button>
